# superchat

./: .env.example  .gitignore  .swp  README.md  ansci art placeholder  pyproject.toml
docs/: changelog.md  file structure  requirements.md  roadmap.txt
superchat/: __init__.py  main.py
superchat/config/: models.json
superchat/core/: chat.py  command_handler.py  config.py  fusion_flow.py  message_handler.py  message_router.py  model_client.py  session.py  setup.py  staged_flow.py
superchat/ui/: display.py
superchat/utils/: api_key_wizard.py  cli.py  debug.py  fuzzy_matcher.py  identifiers.py  model_resolver.py  naming.py  parser.py  stats.py
